--- a/Cwiczenia 5/Makefile
+++ b/Cwiczenia 5/Makefile
@@ -1,8 +1,8 @@
-infile = targa.cpp main.cpp
+infile = main.cpp
 outfile = main.out
 command = $(CXX) $(infile) $(CXXFLAGS)
 
-CXXFLAGS = -o $(outfile) -Wall -lGL -lglut -lGLU
+CXXFLAGS = -o $(outfile) -Wall -lGL -lglut -lGLU 
 
 all: $(outfile)
 
