--- a/Szablon/Makefile
+++ b/Szablon/Makefile
@@ -2,7 +2,7 @@ infile = targa.cpp main.cpp
 outfile = main.out
 command = $(CXX) $(infile) $(CXXFLAGS)
 
-CXXFLAGS = -o $(outfile) -Wall -lGL -lglut -lGLU
+override CXXFLAGS = -o $(outfile) -Wall -lGL -lglut -lGLU
 
 all: $(outfile)
 
