--- a/Cwiczenia 5/Makefile
+++ b/Cwiczenia 5/Makefile
@@ -2,7 +2,7 @@ infile = main.cpp
 outfile = main.out
 command = $(CXX) $(infile) $(CXXFLAGS)
 
-CXXFLAGS = -o $(outfile) -Wall -lGL -lglut -lGLU 
+override CXXFLAGS += -o $(outfile) -Wall -lGL -lglut -lGLU 
 
 all: $(outfile)
 
