--- a/Cwiczenia 7/Makefile
+++ b/Cwiczenia 7/Makefile
@@ -1,8 +1,8 @@
-infile = main.cpp
+infile = targa.cpp main.cpp
 outfile = main.out
 command = $(CXX) $(infile) $(CXXFLAGS)
 
-override CXXFLAGS += -o $(outfile) -Wall -lGL -lglut -lGLU
+override CXXFLAGS = -o $(outfile) -Wall -lGL -lglut -lGLU
 
 all: $(outfile)
 
