--- a/Cwiczenia 3/3/Makefile
+++ b/Cwiczenia 3/3/Makefile
@@ -1,7 +1,7 @@
 infile = targa.cpp main.cpp
 outfile = main.out
 command = g++ $(infile)
-flags = -o $(outfile) -Wall -fpermissive -lGL -lglut -lGLU
+flags = -o $(outfile) -Wall -lGL -lglut -lGLU
 all:
 	$(command) $(flags)
 debug:
