--- a/Cwiczenia 10/Makefile
+++ b/Cwiczenia 10/Makefile
@@ -2,7 +2,7 @@ infile = targa.cpp main.cpp
 outfile = main.out
 command = $(CXX) $(infile) $(CXXFLAGS)
 
-override CXXFLAGS += -o $(outfile) -Wall -lGL -lglut -lGLU
+override CXXFLAGS += -o $(outfile) -Wall -Wno-write-strings -lGL -lglut -lGLU
 
 all: $(outfile)
 
